levbdim_daq/toto
scons: Reading SConscript files ...
16
UBUNTU unknown
['-c++', '-classic', '-Iinclude', '-I/usr/include/boost141/', '-I/home/acqilc/SDHCAL/SDHCAL_common/include', '-I/home/acqilc/SDHCAL/SDHCAL_DB/include', '-I/home/acqilc/SDHCAL/SDHCAL_Readout/include', '-I/usr/include/jsoncpp', '-I/opt/dhcal/levbdim/include', '-I/usr/local/dim/dim', '-I/usr/include/python2.7']
[]
scons: done reading SConscript files.
scons: Building targets ...
g++ -o src/LDIFServer.os -c -fPIC -pthread -O2 -DLINUX -DREENTRANT -Dlinux "-DLITTLE_ENDIAN__ " -Dx86 -DXERCES=2 -DDAQ_VERSION_2 -DUSE_DIM -Iinclude -I/usr/include/boost141 -I/home/acqilc/SDHCAL/SDHCAL_common/include -I/home/acqilc/SDHCAL/SDHCAL_DB/include -I/home/acqilc/SDHCAL/SDHCAL_Readout/include -I/usr/include/jsoncpp -I/opt/dhcal/levbdim/include -I/usr/local/dim/dim -I/usr/include/python2.7 src/LDIFServer.cc
src/LDIFServer.cc: In member function 'void LDIFServer::registerDB(levbdim::fsmmessage*)':
src/LDIFServer.cc:23:26: error: no matching function for call to 'LDIFServer::registerDB(std::string&)'
    this->registerDB(dbsta);
                          ^
src/LDIFServer.cc:23:26: note: candidate is:
src/LDIFServer.cc:19:6: note: void LDIFServer::registerDB(levbdim::fsmmessage*)
 void LDIFServer::registerDB(levbdim::fsmmessage* m)
      ^
src/LDIFServer.cc:19:6: note:   no known conversion for argument 1 from 'std::string {aka std::basic_string<char>}' to 'levbdim::fsmmessage*'
src/LDIFServer.cc: At global scope:
src/LDIFServer.cc:348:6: error: prototype for 'void LDIFServer::registerDB(std::string)' does not match any in class 'LDIFServer'
 void LDIFServer::registerDB(std::string state)
      ^
src/LDIFServer.cc:19:6: error: candidate is: void LDIFServer::registerDB(levbdim::fsmmessage*)
 void LDIFServer::registerDB(levbdim::fsmmessage* m)
      ^
scons: *** [src/LDIFServer.os] Error 1
scons: building terminated because of errors.
